[package]
name = "shunting-yard"
version = "1.0.0"
edition = "2021"
authors = ["Hoang Trung Kien"]
license = "MIT"
description = "A simple shunting yard algorithm implementation in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "*"
rprompt = "*"

[[bin]]
doc = false
name = "shunting-yard"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
