[package]
name = "shunting-yard"
version = "1.0.2"
edition = "2021"
authors = ["Rhelv"]
license = "MIT"
description = "A simple shunting yard algorithm implementation in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0"
rprompt = "2"
anyhow = "1"

[[bin]]
doc = false
name = "shunting-yard"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
rpath = true
